新增:influx資料庫配置檢查、補充管理員部分命令、重設密碼功能 修復:計算台股現金流沒有轉換成統一的貨幣導致後續計算ROI錯誤、沒有資產時寫入influx會拋出錯誤、管理員權限設置錯誤、前端頁面不統一的規範、前端圖表沒有顯示轉換後的資產價格、資產為空時前端載入動畫錯誤 優化:代碼規範、登入註冊頁面對小型設備介面